more projects added

--- a/proyectos/anetA8-plotter.html
+++ b/proyectos/anetA8-plotter.html
@@ -20,7 +20,7 @@
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
-                        <img src="../images/anetA8-plooter_profile.jpg">
+                        <img src="../images/anetA8-plotter_profile.jpg">
                         <p align="justify"></p>
                         <img src="../images/anetA8-plotter_profile.jpg">
                     </div>
@@ -33,21 +33,20 @@
                 <div class="work-list">
                     <div class="work">
                         <video autoplay muted loop playsinline>
-                            <source src="../images/anet_1.mp4" type="video/mp4">
+                            <source src="../images/anetA8-plotter_1.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="work">
-                        <img src="../images/anet_2.jpg">
+                        <img src="../images/anetA8-plotter_2.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/anet_3.jpg">
+                        <img src="../images/anetA8-plotter_3.jpg">
                     </div>
                 </div>    
             </div>
         </div>
-            <div class="copyright">
-                <p id="footer-text"></p>
-            </div>
+        <div class="copyright">
+            <p id="footer-text"></p>
         </div>
         <script src="../js/year.js"></script>
     </body>
