--- a/proyectos/eggcnc.html
+++ b/proyectos/eggcnc.html
@@ -21,6 +21,7 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/eggcnc_profile.jpg">
+                        <p align="justify"></p>
                         <img src="../images/eggcnc_profile.jpg">
                     </div>
                 </div>
@@ -41,9 +42,8 @@
                 </div>    
             </div>
         </div>
-            <div class="copyright">
-                <p id="footer-text"></p>
-            </div>
+        <div class="copyright">
+            <p id="footer-text"></p>
         </div>
         <script src="../js/year.js"></script>
     </body>
