--- a/proyectos/first-2019-2.html
+++ b/proyectos/first-2019-2.html
@@ -32,9 +32,6 @@
                 <h1 class="subtitle">Evidencias</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/first-2019-2_5.jpg">
-                    </div>
-                    <div class="work">
                         <img src="../images/first-2019-2_1.jpg">
                     </div>
                     <div class="work">
@@ -46,14 +43,15 @@
                     <div class="work">
                         <img src="../images/first-2019-2_4.jpg">
                     </div>
+                    <div class="work">
+                        <img src="../images/first-2019-2_5.jpg">
+                    </div>
                 </div>    
             </div>
         </div>
         <div class="copyright">
             <p id="footer-text"></p>
         </div>
-        </div>
-        <div id="topico">Desarrollo</div>
-        <script src="../js/script.js"></script>
+        <script src="../js/year.js"></script>
     </body>
 </html>
