--- a/proyectos/first-2020-1.html
+++ b/proyectos/first-2020-1.html
@@ -22,7 +22,7 @@
                     <div class="description">
                         <img src="../images/first-2020-1_profile.jpg">
                         <p align="justify"></p>
-                        <img src="../images/first-220-1_profile.jpg">
+                        <img src="../images/first-2020-1_profile.jpg">
                     </div>
                 </div>
             </div>
@@ -48,11 +48,8 @@
                     </div>
                     <div class="work">
                         <video autoplay muted loop playsinline>
-                            <source src="../images/first-2020-1_12.mp4" type="video/mp4">
+                            <source src="../images/first-2020-1_6.mp4" type="video/mp4">
                         </video>
-                    </div>
-                    <div class="work">
-                        <img src="../images/first-2020-1_6.jpg">
                     </div>
                     <div class="work">
                         <img src="../images/first-2020-1_7.jpg">
@@ -69,14 +66,15 @@
                     <div class="work">
                         <img src="../images/first-2020-1_11.jpg">
                     </div>
+                    <div class="work">
+                        <img src="../images/first-2020-1_12.jpg">
+                    </div>
                 </div>    
             </div>
         </div>
         <div class="copyright">
             <p id="footer-text"></p>
         </div>
-        </div>
-        <div id="topico">Desarrollo</div>
-        <script src="../js/script.js"></script>
+        <script src="../js/year.js"></script>
     </body>
 </html>
