--- a/proyectos/first-2019-1.html
+++ b/proyectos/first-2019-1.html
@@ -46,8 +46,6 @@
         <div class="copyright">
             <p id="footer-text"></p>
         </div>
-        </div>
-        <div id="topico">Desarrollo</div>
-        <script src="../js/script.js"></script>
+        <script src="../js/year.js"></script>
     </body>
 </html>
