and more projects

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                                 <li><span>Diseño 3D y Simulaciones.</span><br>Manejo de Solidworks para Modelado de Sistemas Mecánicos y Simulaciones de Optimización y Resistencia.</li>
                                 <li><span>Manufactura</span><br>Operación de máquinas CNC.</li>
                                 <li><span>Electrónica</span><br>Diseño de Sistemas Digitales y Programación Eficiente de Microcontroladores</li>
+                                <li><span>Producción</span><br>Edición de fotografía y video.</li>
                                 <li><span>Inglés</span><br>Nivel B2.</li>
                             </ul>
                         </div>
