--- a/proyectos/first-2021-3.html
+++ b/proyectos/first-2021-3.html
@@ -21,7 +21,7 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/first-2021-3_profile.jpg">
-                        <p align="justify"></p>
+                        <p align="justify"><a href="../resources/FRC Flyer 2021.pdf" target="_blank">Flyer</a></p>
                         <img src="../images/first-2021-3_profile.jpg">
                     </div>
                 </div>
@@ -56,14 +56,13 @@
                         <img src="../images/first-2021-3_8.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/first-2021-3_9.jpg">
-                    </div>
-                    <div class="work">
-                        <img src="../images/first-2021-3_10.jpg">
+                        <video autoplay muted loop playsinline>
+                            <source src="../images/first-2021-3_9.mp4" type="video/mp4">
+                        </video>
                     </div>
                     <div class="work">
                         <video autoplay muted loop playsinline>
-                            <source src="../images/first-2021-3_11.mp4" type="video/mp4">
+                            <source src="../images/first-2021-3_10.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>    
