more projects added

--- a/proyectos/e-gokart.html
+++ b/proyectos/e-gokart.html
@@ -39,7 +39,7 @@
                 <h1 class="subtitle">Evidencias</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/e-gokart_1.png">
+                        <img src="../images/e-gokart_1.jpg">
                     </div>
                     <div class="work">
                         <img src="../images/e-gokart_2.jpg">
