--- a/proyectos/first-2021-2.html
+++ b/proyectos/first-2021-2.html
@@ -62,9 +62,7 @@
                         <img src="../images/first-2021-2_10.jpg">
                     </div>
                     <div class="work">
-                        <video autoplay muted loop playsinline>
-                            <source src="../images/first-2021-2_11.mp4" type="video/mp4">
-                        </video>
+                        <img src="../images/first-2021-2_11.jpg">
                     </div>
                 </div>    
             </div>
