--- a/proyectos/rlc.html
+++ b/proyectos/rlc.html
@@ -35,16 +35,17 @@
                         <img src="../images/rlc_1.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/rlc_2.jpg">
+                        <video autoplay muted loop playsinline>
+                            <source src="../images/rlc_2.mp4" type="video/mp4">
+                        </video>
                     </div>
                     <div class="work">
                         <img src="../images/rlc_3.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/rlc_4.jpg">
-                    </div>
-                    <div class="work">
-                        <img src="../images/rlc_5.jpg">
+                        <video autoplay muted loop playsinline>
+                            <source src="../images/rlc_4.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>    
             </div>
