--- a/proyectos/dif-lego.html
+++ b/proyectos/dif-lego.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="data:,">
-        <title>DIF</title>
+        <title>DIF LEGO</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="header-subpage">
             <a href="javascript:history.back()"><i class="fa-solid fa-angles-left"></i></a>
-            <h2>DIF</h2>
+            <h2>DIF LEGO</h2>
             <span></span>
         </div>
         <div id="De_Que_Trata">
@@ -20,9 +20,9 @@
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
-                        <img src="../images/dif_profile.jpg">
+                        <img src="../images/dif-lego_profile.jpg">
                         <p align="justify"></p>
-                        <img src="../images/dif_profile.jpg">
+                        <img src="../images/dif-lego_profile.jpg">
                     </div>
                 </div>
             </div>
@@ -32,25 +32,25 @@
                 <h1 class="subtitle">Evidencias</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/dif_1.jpg">
+                        <img src="../images/dif-lego_1.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/dif_2.jpg">
+                        <img src="../images/dif-lego_2.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/dif_3.jpg">
+                        <img src="../images/dif-lego_3.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/dif_4.jpg">
+                        <img src="../images/dif-lego_4.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/dif_5.jpg">
+                        <img src="../images/dif-lego_5.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/dif_6.jpg">
+                        <img src="../images/dif-lego_6.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/dif_7.jpg">
+                        <img src="../images/dif-lego_7.jpg">
                     </div>
                 </div>    
             </div>
