--- a/proyectos/biblioteca.html
+++ b/proyectos/biblioteca.html
@@ -11,9 +11,6 @@
     </head>
     <body>
         <div class="header-subpage">
-            <a href="javascript:history.back()"><i class="fa-solid fa-angles-left"></i></a>
-            <h2>Biblioteca</h2>
-            <span></span>
         </div>
         <div id="De_Que_Trata">
             <div class="container-subpage">
@@ -56,5 +53,6 @@
             <p id="footer-text"></p>
         </div>
         <script src="../js/year.js"></script>
+        <script src="../js/backpage.js"></script>
     </body>
 </html>
