--- a/proyectos/first-2019-1.html
+++ b/proyectos/first-2019-1.html
@@ -11,9 +11,6 @@
     </head>
     <body>
         <div class="header-subpage">
-            <a href="https://paoloreyes.github.io/web/"><i class="fa-solid fa-angles-left"></i></a>
-            <h2>FIRST 2019 (FTC)</h2>
-            <span></span>
         </div>
         <div id="De_Que_Trata">
             <div class="container-subpage">
@@ -47,5 +44,6 @@
             <p id="footer-text"></p>
         </div>
         <script src="../js/year.js"></script>
+        <script src="../js/backpage.js"></script>
     </body>
 </html>
