--- a/proyectos.html
+++ b/proyectos.html
@@ -15,6 +15,17 @@
             <h2>Mis Proyectos</h2>
             <span></span>
         </div>
+        <div class="selection" id="select-container">
+            <div class="container">
+                <label>Orden:</label>
+                <select class="selector" onchange="sort()" onclick="extend()">
+                    <option value="Mas Reciente">Mas Reciente</option>
+                    <option value="Mas Antiguo">Mas Antiguo</option>
+                    <option value="A-Z">A-Z</option>
+                </select>
+                <i class="fa-solid fa-caret-down"></i>
+            </div>
+        </div>
         <div class="container">
             <div class="work-list" id="workplace"></div>
         </div>
@@ -23,5 +34,6 @@
         </div>
         <script src="./js/projects.js"></script>
         <script src="./js/year.js"></script>
+        <script src="./js/sort.js"></script>
     </body>
 </html>
