--- a/proyectos.html
+++ b/proyectos.html
@@ -20,18 +20,18 @@
                 <div class="options-container">
                     <div class="option">
                         <input type="radio" class="radio" id="MasReciente" name="category">
-                        <label for="MasReciente">Mas Reciente</label>
+                        <label for="MasReciente">Más Reciente</label>
                     </div>
                     <div class="option">
                         <input type="radio" class="radio" id="MasAntiguo" name="category">
-                        <label for="MasAntiguo">Mas Antiguo</label>
+                        <label for="MasAntiguo">Más Antiguo</label>
                     </div>
                     <div class="option">
                         <input type="radio" class="radio" id="A-Z" name="category">
                         <label for="A-Z">A-Z</label>
                     </div>
                 </div>
-                <div class="selected">Mas Reciente</div>
+                <div class="selected">Más Reciente</div>
             </div>
         </div>
         <div class="container">
