main page projects

--- a/index.html
+++ b/index.html
@@ -106,30 +106,9 @@
             <div class="container">
                 <h1 class="subtitle">Mis Proyectos</h1>
                 <div class="work-list-main">
-                    <div class="work">
-                        <img src="./images/paolo_yt.png">
-                        <div class="layer">
-                            <h3>Paolo Inspires</h3>
-                            <p>Un proyecto personal de divulgación de ciencia y tecnología por medio de videos de YouTube</p>
-                            <a href="./proyectos/paolo-inspires"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="work">
-                        <img src="./images/FRC_design_2022.jpg">
-                        <div class="layer">
-                            <h3>FIRST 2022</h3>
-                            <p>Creación de robots de competencia de más de 50 kg</p>
-                            <a href="./proyectos/first-2022"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
-                    <div class="work">
-                        <img src="./images/e_gokart_wheels.png">
-                        <div class="layer">
-                            <h3>E-GoKart</h3>
-                            <p>Go Kart eléctrico hecho de tubos de PVC</p>
-                            <a href="./proyectos/e-gokart"><i class="fas fa-external-link-alt"></i></a>
-                        </div>
-                    </div>
+                    <div class="work"></div>
+                    <div class="work"></div>
+                    <div class="work"></div>
                 </div>
                 <a href="proyectos" class="btn">Ver más</a>     
             </div>
@@ -196,6 +175,8 @@
                 sidemenu.style.right = "-200px";
             }
         </script>
+        <script src="./js/projects_list.js"></script>
+        <script src="./js/main_3.js"></script>
         <script src="./js/mail.js"></script>
         <script src="./js/year.js"></script>
     </body>
