--- a/proyectos.html
+++ b/proyectos.html
@@ -41,6 +41,7 @@
             <p id="footer-text"></p>
         </div>
         <script src="./js/projects.js"></script>
+        <script src="./js/projects_list.js"></script>
         <script src="./js/year.js"></script>
         <script src="./js/sort.js"></script>
     </body>
