--- a/proyectos/first-nacional.html
+++ b/proyectos/first-nacional.html
@@ -1,4 +1,5 @@
 <!--10/12/2022-->
+<!--Un proyecto de divulgación de conocimiento donde enseñé sobre mecánica para robots de competencia a todos los campus a nivel nacional de la Universidad TecMilenio.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
