--- a/proyectos/huerto-iot.html
+++ b/proyectos/huerto-iot.html
@@ -1,4 +1,5 @@
 <!--28/11/2022-->
+<!--Un huerto automatizado que monitorea la humedad y temperatura de 4 plantas y las riega cuando lo necesitan. El estado de cada planta puede ser consultado desde cualquier parte del mundo por medio de internet.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
