--- a/proyectos/robociety.html
+++ b/proyectos/robociety.html
@@ -1,4 +1,5 @@
 <!--29/10/2022-->
+<!--Un grupo estudiantil donde creamos robots de competencia y en el cual soy encargado de los sistemas de control.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
