PWP-10 Name and date in projects page

--- a/proyectos.html
+++ b/proyectos.html
@@ -41,8 +41,8 @@
             <p id="footer-text"></p>
         </div>
         <script src="./js/projects_list.js"></script>
-        <script src="./js/projects.js"></script>
+        <script type="module" src="./js/projects.js"></script>
         <script src="./js/year.js"></script>
-        <script src="./js/sort.js"></script>
+        <script type="module" src="./js/sort.js"></script>
     </body>
 </html>
