--- a/proyectos/first-2021-3.html
+++ b/proyectos/first-2021-3.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="data:,">
-        <title>FIRST 2021 (FRC Real)</title>
+        <title>FIRST 2021 (Real)</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
