some projects descriptions added

--- a/proyectos/aerodesign.html
+++ b/proyectos/aerodesign.html
@@ -1,4 +1,5 @@
 <!--20/08/2021-->
+<!--Un grupo estudiantil del Tecnológico de Monterrey Campus Toluca encargado de la construcción de aeronaves para competencia.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,9 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/aerodesign_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Aerodesign es un grupo estudiantil del Tecnológico de Monterrey Campus Toluca que se encarga de crear aeronaves no tripuladas para la competencia SAE Aerodesign, este proyecto comprende un proceso completo de ingeniería ya que parte del diseño y modelado 3D de la aeronave incluyendo sus simulaciones topológicas, de resistencia de materiales y aerodinámicas y va hasta la manufactura real y el cableado electrónico.</p><br><p>Mi trabajo en el equipo fue principalmente en el diseño 3D dónde me encargué de reducir el peso del ala y darle movilidad a los alerones para permitir un correcto direccionamiento de la aeronave, de igual forma participé en el armado del avión entero y en la manufactura del tren de aterrizaje.</p>
                         <img src="../images/aerodesign_profile.jpg">
                     </div>
                 </div>
