--- a/proyectos/bazoobed.html
+++ b/proyectos/bazoobed.html
@@ -1,4 +1,5 @@
 <!--15/04/2020-->
+<!---Un robot para una competencia interna de mi preparatoria, su misión era reventar 12 globos colocados en la periferia de una cancha circular en el menor tiempo posible.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,7 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/bazoobed_profile.jpg">
-                        <p align="justify"></p>
+                        <p>En mi último semestre de preparatoria la escuela sacó una convocatoria sobre una competencia interna de robótica a nivel nacional, esta consistía en fabricar un robot capaz de reventar 12 globos localizados en la periferia de una cancha cuadrada en el menor tiempo posible.</p><br><p>Mi enfoque para resolver este problema fue sencillo, fabricar una pistola de balas NERF a las cuales les pondría una aguja en la punta con las que reventaría los globos, esta pistola estaría conectada a dos ejes motorizados que permitirían cambiar el ángulo de disparo de izquierda a derecha y de arriba a abajo.</p><br><p>El principio de funcionamiento era sencillo, dos servomotores controlarían el ángulo de disparo, dos motores de 6 volts girarían en sentidos contrarios para acelerar las balas y dispararlas y finalmente un tercer servomotor de menor tamaño empujaría las balas desde su cartucho hasta los motores.</p><br><p>En el área de la electrónica se usaría un atmega328p como cerebro del robot, un módulo bluetooth para comunicar el robot con una computadora y sensores varios (infrarrojos y potenciometros) para conocer la posición de disparo en todo momento.</p><br><p>En el concurso quedé en segundo lugar después de que el bluetooth se desconectara antes de reventar el último globo y tomara mucho tiempo en reconectar.</p>
                         <img src="../images/bazoobed_profile.jpg">
                     </div>
                 </div>
