--- a/proyectos/biblioteca.html
+++ b/proyectos/biblioteca.html
@@ -1,4 +1,5 @@
 <!--20/02/2022-->
+<!--Como parte de mis servicios de manufactura en colaboración con mi socio, diseñamos, cortamos, pintamos e instalamos una librería para una iglesia cercana a nuestra a nuestro taller-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,9 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/biblioteca_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Como parte de uno de los servicios que ofrezco está la manufactura de cualquier cosa, debido a ello mi socio y yo recibimos un pedido para diseñar una biblioteca a la medida en un cuarto desocupado de un iglesia cercana al taller.</p><br><p>La idea general era escoger una pared y crear una serie de cajas profundas en las que se puedan colocar libros muy grandes y en la segunda pared poner repisas donde colocar libros más pequeños.</p><br><p>Para los cajones se tomó la medida de la pared y se escogió el diseño para organizarlos de una forma algo creativa pero mantiendo la estructura de filas y columnas, para las repisas se diseñaron eles de madera con un tope en la parte frontal para colocar los libros sin que sean propensos a caerse.</p>
                         <img src="../images/biblioteca_profile.jpg">
                     </div>
                 </div>
