--- a/proyectos/cafeteria.html
+++ b/proyectos/cafeteria.html
@@ -1,4 +1,5 @@
 <!--04/08/2022-->
+<!--Como parte de mis servicios de manufactura en colaboración con mi socio, mecanizamos el logo en 3D, las puertas para un cajón interno y un pizarrón para escribir el menú y los precios de una cafetería que estaba por abrir sus puertas.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,14 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/cafeteria_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Como parte de uno de los servicios que ofrezco está la manufactura de cualquier cosa, debido a ello mi socio y yo recibimos un pedido para mecanizar el logo en 3D y algunas otras piezas estéticas para una cafetería que estaba por abrir sus puertas.</p><br><p>El proyecto consistió en mecanizar el logo de la taza de café y las letras de la cafetería "AL GRANO" en madera de 15mm para posteriormente pintarlas e instalarlas en el local.</p><br><p>En adición al logo principal también mecanizamos elementos extras para mejorar la estética, esos elementos fueron los siguientes:</p> 
+                        <ul>
+                            <li>Un segundo logo en madera más delgada para que fuera colocado en el mostrador</li> 
+                            <li>Unas puertas abatibles para un fregador que estaba expuesto y le daba un acabado menos limpio al lugar</li>
+                            <li>Un marco con una placa cubierta con pintura para pizarrón para que se pudiera escribir el menú o cosas importantes del día.</li>
+                        </ul>
                         <img src="../images/cafeteria_profile.jpg">
                     </div>
                 </div>
