--- a/proyectos/curso-arduino.html
+++ b/proyectos/curso-arduino.html
@@ -1,4 +1,5 @@
 <!--23/04/2021-->
+<!--Un curso de 18 capítulos dónde enseño programación de microcontroladores por medio de registros usando como ejemplo el atmega328p-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,9 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/curso-arduino_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Es el contenido más famoso de mi canal de youtube, comprende una serie de 18 videos donde enseño desde los temas más básicos de álgebra booleana hasta el funcionamiento interno de un timer en un microcontrolador, el curso es para usuarios avanzados ya que usamos el lenguaje de programación 'C' como una herramienta, en ningún momento se busca enseñar a programar o dar los fundamentos en electrónica, sino que se retoman estos conocimientos base para acceder a los registros del microcontrolador y ver como modificando bit a bit podemos cambiar configuraciones internas e incluso controlar dispositivos de más alto nivel para habilitar interacciones complejas.</p>
                         <img src="../images/curso-arduino_profile.jpg">
                     </div>
                 </div>
