--- a/proyectos/dif-lego.html
+++ b/proyectos/dif-lego.html
@@ -1,4 +1,5 @@
 <!--20/07/2022-->
+<!--Un verano donde en colaboración con TECBOT (el primer equipo de robótica del Tec de Monterrey) impartí cursos de robótica con LEGO's a niños de 12 a 15 años.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,9 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/dif-lego_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Durante el verano del 2022 me informaron que TECBOT (el primer equipo de robótica del Tec de Monterrey) estaba buscando gente para ayudar en la impartición de un curso de 2 semanas sobre robótica usando LEGO mindstorms, yo no tenía mucha experiencia programando en bloques por lo que vi un par de videos y me aventuré como tutor de 5 chicas y 5 chicos para enseñarles todo lo que necesitaban saber para programar un robot que pudiera seguir una linea negra evitando los 3 obstáculos que se les presentaban en su camino.</p><br><p>En este proyecto no solo se involucró el conocimiento técnico, sino que principalmente se buscaba encontrar las maneras de comunicar los temas sin que les pareciera aburrido a los niños y por ende yo diría que el apartado de la educación tuvo más importancia que el aspecto técnico.</p>
                         <img src="../images/dif-lego_profile.jpg">
                     </div>
                 </div>
