--- a/proyectos/e-bike.html
+++ b/proyectos/e-bike.html
@@ -1,4 +1,5 @@
 <!--10/10/2021-->
+<!--Una bicicleta eléctrica controlada por una cadena externa por tres motores de alta tecnología para viajar sin pedalear-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,7 +20,14 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/e-bike_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Un tiempo de mi vida me dediqué a vender productos por internet y hacer entregas a domicilio, el problema era que las entregas las hacía caminando al no tener coche, después decidí pasar a hacer las entregas en bicicleta pero me cansaba mucho por lo que decidí convertir mi bicicleta a eléctrica usando motores que tenía en casa y el sistema de control de los robots de la competencia en la que participaba, el proceso fue complicado debido a mi escasa herramienta y presupuesto, pero de alguna formá logré ponerlo en marcha </p><br><p>La bicicleta eléctrica contaba con los siguientes elementos:</p>
+                        <ul>
+                            <li>Tres motores NEO sin escobillas.</li>
+                            <li>Tres controladores de motores SPARK MAX para controlar la velocidad por pulsos PWM.</li>
+                            <li>Un arduino UNO como cerebro de la bicicleta</li>
+                            <li>Un potenciometro conectado a una palanca de freno que servía de acelerador.</li>
+                        </ul>
+                        <p>La bicicleta funcionó sin ningún problema y me sirvió para viajar indefinidamente por casi 3 meses hasta que tuve que regresar los componentes al equipo de robótica ya que no eran mios.</p>
                         <img src="../images/e-bike_profile.jpg">
                     </div>
                 </div>
