--- a/proyectos/cursos-tec.html
+++ b/proyectos/cursos-tec.html
@@ -1,4 +1,5 @@
 <!--20/08/2022-->
+<!--Cursos que impartía a alumnos de nuevo ingreso de la carrera de Ingeniería en Tecnologías Computacionales como introducción a lo que aprenderían a lo largo de sus estudios.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -17,9 +18,15 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="description">
+                    <div class="small-description">
                         <img src="../images/cursos-tec_profile.jpg">
-                        <p align="justify"></p>
+                        <p>Por ser uno de los estudiantes con mayor desempeño en mi carrera, el director de área de la universidad me pedía impartir diversos cursos a estudiantes de último año de preparatoria que estaban considerando opciones para entrar a la universidad, dentro de los temas que impartía estaban:</p>
+                        <ul>
+                            <li>Programación en python para controlar drones.</li>
+                            <li>Programación en bloques para controlar robots esfera.</li>
+                            <li>Redes (Funcionamiento de enrutadores de red).</li>
+                        </ul>
+                        <p>Como consecuencia de estos cursos conseguí que más estudiantes entraran a estudiar el área de Ingeniería en Computación y Tecnologías de la Información, además de eso los estudiantes me reconocían por el campus y me saludaban como aquel alumno que los ayudó a escoger a donde iban a encaminar sus vidas.  </p>
                         <img src="../images/cursos-tec_profile.jpg">
                     </div>
                 </div>
