--- a/proyectos/e-gokart.html
+++ b/proyectos/e-gokart.html
@@ -19,14 +19,14 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/e-gokart_profile.jpg">
-                        <p align="justify">Este proyecto cosistió en la elaboración de un go-kart eléctrico hecho a base de tubos de PVC, la razón de su extraño material de estructura era que quería difundir la ciencia y la tecnología a rincones remotos de México, para hacerlo se me ocurrió la gran idea de llevar una muestra real de lo que es posible hacer gracias a la ciencia y la tecnología. Con este enfoque pensé que una forma impactante de mostrar la ingeniería sería creando un vehículo eléctrico, para construirlo con poco presupuesto y sin muchas herramientas pensé en hacer una abstracción a un LEGO, de esta forma llevaría piezas de PVC precortadas a las escuelas donde se hicieran las pláticas y solo bastaría que los niños las ensamblaran siguiendo un instructivo. Además cada vehículo contaría con:</p>
+                        <p>Este proyecto cosistió en la elaboración de un go-kart eléctrico hecho a base de tubos de PVC, la razón de su extraño material de estructura era que quería difundir la ciencia y la tecnología a rincones remotos de México, para hacerlo se me ocurrió la gran idea de llevar una muestra real de lo que es posible hacer gracias a la ciencia y la tecnología. Con este enfoque pensé que una forma impactante de mostrar la ingeniería sería creando un vehículo eléctrico, para construirlo con poco presupuesto y sin muchas herramientas pensé en hacer una abstracción a un LEGO, de esta forma llevaría piezas de PVC precortadas a las escuelas donde se hicieran las pláticas y solo bastaría que los niños las ensamblaran siguiendo un instructivo.</p><br><p>Además cada vehículo contaría con:</p>
                         <ul>
                             <li>Recarga por energía solar.</li>
                             <li>Indicador de carga de bateria.</li>
                             <li>Control por pedal.</li>
                             <li>Claxon.</li>
                         </ul>
-                        <p align="justify"><br>Este proyecto debido a su caracter tecnológico-social fue premiado por la compañía "DOW chemical" como el mejor proyecto de latinoamérica del 2019 y me dio la oportunidad de viajar a Kenia a realizar un voluntariado con los otros 27 ganadores de este concurso alrededor del mundo.</p>
+                        <p>Este proyecto debido a su caracter tecnológico-social fue premiado por la compañía "DOW chemical" como el mejor proyecto de latinoamérica del 2019 y me dio la oportunidad de viajar a <a href="./kenia">Kenia</a> a realizar un voluntariado con los otros 27 ganadores de este concurso alrededor del mundo.</p>
                         <img src="../images/e-gokart_profile.jpg">
                     </div>
                 </div>
